<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="2dp"
        app:cardElevation="2dp"
        android:transitionName="@string/transition"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleView"
                android:textStyle="bold"
                android:textSize="20sp"
                android:maxLines="3"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16sp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="@string/titletransition"
                android:text="TextView" />

            <TextView
                android:id="@+id/yy"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:text="Android UI" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:paddingLeft="16dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/commentImg"
                    android:transitionName="@string/commentsIMGtransition"
                    android:layout_width="20dp"
                    android:src="@drawable/icons_comments"
                    android:layout_height="20dp" />

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/commentsView"
                     android:layout_height="wrap_content"
                    android:transitionName="@string/commentstransition"
                    android:text="102" />
                <ImageView
                    android:id="@+id/favoriteImg"
                    android:transitionName="@string/favoriteIMGtransition"
                    android:layout_width="20dp"
                    android:src="@drawable/icons_heart"
                    android:layout_marginLeft="16dp"
                    android:layout_height="20dp" />
                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/favouriteView"
                    android:transitionName="@string/favoritetransition"
                    android:layout_marginRight="16sp"
                    android:textSize="12sp"
                    android:text="12k" />
                <ImageView
                    android:id="@+id/viewIMG"
                    android:transitionName="@string/viewIMGtransition"
                    android:layout_width="20dp"
                    android:src="@drawable/icons_eye"
                    android:layout_height="20dp" />
                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/viewView"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:transitionName="@string/viewtransition"
                    android:text="30k" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>