<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"

    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/detialHeaderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:transitionName="@string/transition"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:text="Questions" />

        <LinearLayout
            android:id="@+id/profileHeaderView"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:gravity="center|left"
            android:paddingLeft="16dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"

                app:srcCompat="@mipmap/imgd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center|left"

                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:textSize="23sp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Manu Aravind" />

                <TextView
                    android:id="@+id/textView6"
                    android:textSize="12sp"
                    android:layout_marginLeft="16dp"
                    android:textColor="#B0C5F5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mobile Developer" />


            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleView"
                android:textStyle="bold"
                android:textSize="20sp"
                android:transitionName="@string/titletransition"
                android:maxLines="3"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16sp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:text="Android UI" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:paddingLeft="16dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/commentImg"
                    android:transitionName="@string/commentsIMGtransition"
                    android:layout_width="20dp"
                    android:src="@drawable/icons_comments"
                    android:layout_height="20dp" />

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/commentsView"
                    android:layout_height="wrap_content"
                    android:transitionName="@string/commentstransition"
                    android:text="102" />
                <ImageView
                    android:id="@+id/favoriteImg"
                    android:transitionName="@string/favoriteIMGtransition"
                    android:layout_width="20dp"
                    android:src="@drawable/icons_heart"
                    android:layout_marginLeft="16dp"
                    android:layout_height="20dp" />
                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/favouriteView"
                    android:transitionName="@string/favoritetransition"
                    android:layout_marginRight="16sp"
                    android:textSize="12sp"
                    android:text="12k" />
                <ImageView
                    android:id="@+id/viewIMGtransition"
                    android:transitionName="@string/viewIMGtransition"
                    android:layout_width="20dp"
                    android:src="@drawable/icons_eye"
                    android:layout_height="20dp" />
                <TextView
                    android:textColor="@android:color/white"
                    android:id="@+id/viewView"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:transitionName="@string/viewtransition"
                    android:text="30k" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/commentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>