<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:visibility="visible"
        android:gravity="center|left"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alphaTv"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/aiphabox"
            android:layout_width="40dp"
            android:layout_height="40dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center|left"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTV"
                android:textSize="15sp"
                android:layout_marginLeft="16dp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Manu Aravind" />

            <TextView
                android:id="@+id/emailTV"
                android:textSize="12sp"
                android:layout_marginLeft="16dp"
                android:textColor="#e4429d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="live.com" />


        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/commentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:textColor="#B0C5F5"
        android:textSize="15sp"
        android:text="TextView" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center|left"
        android:paddingLeft="16dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/commentImg"
            android:transitionName="@string/commentsIMGtransition"
            android:layout_width="20dp"
            android:src="@drawable/iconcomment"
            android:layout_height="20dp" />

        <TextView
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="5dp"
            android:id="@+id/commentsView"
            android:layout_height="wrap_content"
            android:transitionName="@string/commentstransition"
            android:text="102" />
        <ImageView
            android:id="@+id/favoriteImg"
            android:transitionName="@string/favoriteIMGtransition"
            android:layout_width="20dp"
            android:src="@drawable/iconheart"
            android:layout_marginLeft="16dp"
            android:layout_height="20dp" />
        <TextView
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:id="@+id/favouriteView"
            android:transitionName="@string/favoritetransition"
            android:layout_marginRight="16sp"
            android:textSize="12sp"
            android:text="12k" />

    </LinearLayout>
</LinearLayout>